objects/ssot__GeneratedOperationPlan__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__CreatedDate__c</fullName>
        <label>Created Date</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__FeedbackIdentifier__c</fullName>
        <label>Feedback Identifier</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__GeneratedOperationPlanType__c</fullName>
        <label>Generated Operation Plan Type</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Generated Operation Plan Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__RelatedReferenceId__c</fullName>
        <label>Related Reference</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__RelatedReferenceObject__c</fullName>
        <label>Related Reference Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__TopicDescription__c</fullName>
        <label>Topic Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__TopicName__c</fullName>
        <label>Topic Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1723128201980_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>GeneratedOperationPlan_RelatedRefere_rel</label>
        <referenceTo>ssot__Case__dlm</referenceTo>
        <relationshipLabel>GeneratedOperationPlan_RelatedRefere_rel</relationshipLabel>
        <relationshipName>rel_1723128201980_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1723128945210_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>GeneratedOperationPlan_RelatedRefere_rel</label>
        <referenceTo>ssot__Opportunity__dlm</referenceTo>
        <relationshipLabel>GeneratedOperationPlan_RelatedRefere_rel</relationshipLabel>
        <relationshipName>rel_1723128945210_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>